apps/astronomy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astronomy
  labels:
    istio-injection: enabled
